kubernetes/apps/finesse-guidance/finesse-guidance-namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: finesse-guidance
  labels:
    name: finesse-guidance
