kubernetes/apps/finesse-guidance/finesse-guidance-frontend-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finesse-frontend
  namespace: finesse-guidance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finesse-frontend
  template:
    metadata:
      labels:
        app: finesse-frontend
    spec:
      serviceAccountName: secrets-reader
      containers:
      - name: finesse-frontend
        image: ghcr.io/ai-cfia/finesse-frontend:main
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 60
          periodSeconds: 10

---
apiVersion: v1
kind: Service
metadata:
  name: finesse-frontend-svc
  namespace: finesse-guidance
spec:
  clusterIP: None
  selector:
    app: finesse-frontend
  ports:
    - protocol: TCP
      port: 3000
